--- a/CodigoPunto3FEST.ipynb
+++ b/CodigoPunto3FEST.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtuoEiGhkfZmAhyP7WMsME",
+      "authorship_tag": "ABX9TyPGLMMoPJcXP4kKIE/qKk6O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
         }
       ],
       "source": [
-        "# Simulación numérica de la marcha aleatoria en 1D\n",
+        "# Simulacion numerica de la marcha aleatoria en 1D\n",
         "#Nombre: Juan Pablo Puentes Bayona\n",
         "#Código: 202310155\n",
         "import numpy as np\n",
@@ -132,10 +132,10 @@
         "        resultados[\"x_mean\"].append(np.mean(pos_finales))      # ⟨x⟩\n",
         "        resultados[\"x2_mean\"].append(np.mean(pos_finales**2))  # ⟨x²⟩\n",
         "    return resultados\n",
-        "# ----- Simulación para varios valores de N ------\n",
+        "# ----- Simulacion para varios valores de N ------\n",
         "N_values = [10, 50, 100, 200, 500, 1000]\n",
         "res = promedio(N_values, n_veces=5000)\n",
-        "N = 3000  # número de pasos\n",
+        "N = 3000  # numero de pasos\n",
         "n_veces = 5000  # cantidad de caminatas\n",
         "pos_finales, trayectorias = marcha_aleatoria(N, n_veces)\n",
         "\n",
@@ -176,7 +176,7 @@
         "plt.grid(True)\n",
         "plt.show()\n",
         "\n",
-        "# Estimación de la constante de difusión D\n",
+        "# Estimacion de la constante de difusion D\n",
         "D_estimado = [res[\"x2_mean\"][i]/(2*res[\"N\"][i]) for i in range(len(N_values))]\n",
         "print(\"Estimaciones de la constante de difusión D:\")\n",
         "for N, xm, x2m, D in zip(res[\"N\"], res[\"x_mean\"], res[\"x2_mean\"], D_estimado):\n",
